[tool.poetry]
name = "cars"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10"
opencv-python = ">=4.1.1"
torch = ">=1.7.0"
pandas = ">=1.1.4"
requests = ">=2.23.0"
scipy = ">=1.4.1"
matplotlib = ">=3.2.2"
numpy = ">=1.18.5"
Pillow = ">=7.1.2"
PyYAML = ">=5.3.1"
torchvision = ">=0.8.1"
tqdm = ">=4.41.0"
protobuf = "<=3.20.1"
tensorboard = ">=2.4.1"
seaborn = ">=0.11.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
